[gd_scene load_steps=30 format=3 uid="uid://c4k5pqrhag5nd"]

[ext_resource type="Script" uid="uid://xg28pt6og6kg" path="res://scripts/DungeonLevel.gd" id="1_2gd5k"]
[ext_resource type="PackedScene" uid="uid://bd3qtmr2tnl7d" path="res://scenes/NPC.tscn" id="2_8bkgm"]
[ext_resource type="PackedScene" path="res://scenes/NPCDiretor.tscn" id="2_diretor"]
[ext_resource type="PackedScene" path="res://scenes/NPCGeografia.tscn" id="2_geografia"]
[ext_resource type="PackedScene" path="res://scenes/NPCHistoria.tscn" id="2_historia"]
[ext_resource type="PackedScene" uid="uid://npemale123" path="res://scenes/NPCMale.tscn" id="2_male"]
[ext_resource type="PackedScene" path="res://scenes/NPCMatematica.tscn" id="2_matematica"]
[ext_resource type="PackedScene" uid="uid://b845phpfkqaak" path="res://kenney_modular-dungeon-kit_1/Models/GLB format/room-small.glb" id="3_room_small"]
[ext_resource type="PackedScene" uid="uid://cxf1foop3nxlg" path="res://kenney_modular-dungeon-kit_1/Models/GLB format/room-large.glb" id="4_room_large"]
[ext_resource type="PackedScene" uid="uid://cn2ugckfl62wj" path="res://kenney_modular-dungeon-kit_1/Models/GLB format/gate-door.glb" id="6_gate_door"]
[ext_resource type="PackedScene" uid="uid://p36v6jnaadcx" path="res://kenney_modular-dungeon-kit_1/Models/GLB format/template-wall.glb" id="7_wall"]
[ext_resource type="PackedScene" uid="uid://cl7j4meg8y8ou" path="res://kenney_modular-dungeon-kit_1/Models/GLB format/room-wide.glb" id="10_cabpm"]
[ext_resource type="PackedScene" uid="uid://outfswl7wiir" path="res://kenney_modular-dungeon-kit_1/Models/GLB format/room-large-variation.glb" id="10_udr20"]
[ext_resource type="PackedScene" uid="uid://bbr5uijaumgr6" path="res://kenney_mini-characters/Models/GLB format/character-female-a.glb" id="12_i35j1"]
[ext_resource type="PackedScene" uid="uid://mvjor0vipapd" path="res://kenney_mini-characters/Models/GLB format/character-female-b.glb" id="13_u7gqd"]
[ext_resource type="PackedScene" uid="uid://cbga8k7bc4j36" path="res://kenney_mini-characters/Models/GLB format/character-female-c.glb" id="14_uw3sn"]
[ext_resource type="PackedScene" uid="uid://dqarpun6ip1pm" path="res://kenney_mini-characters/Models/GLB format/character-female-d.glb" id="15_35sjm"]
[ext_resource type="PackedScene" uid="uid://cjyhcdod6kuwa" path="res://kenney_mini-characters/Models/GLB format/character-female-e.glb" id="16_l5c6j"]
[ext_resource type="PackedScene" uid="uid://cveebjfebns2m" path="res://kenney_mini-characters/Models/GLB format/character-female-f.glb" id="17_j8sut"]
[ext_resource type="PackedScene" uid="uid://b6stnvxhhdaoy" path="res://kenney_mini-characters/Models/GLB format/character-male-a.glb" id="18_7xeh1"]
[ext_resource type="PackedScene" uid="uid://ubkn8phg2e8p" path="res://kenney_mini-characters/Models/GLB format/character-male-b.glb" id="19_vxgt2"]
[ext_resource type="PackedScene" uid="uid://cqvmuontms4c5" path="res://kenney_mini-characters/Models/GLB format/character-male-c.glb" id="20_ssanu"]
[ext_resource type="PackedScene" uid="uid://b5oh331qyq5ch" path="res://kenney_mini-characters/Models/GLB format/character-male-d.glb" id="21_ybux8"]
[ext_resource type="PackedScene" uid="uid://bnh2g5r5c2tqi" path="res://kenney_mini-characters/Models/GLB format/character-male-e.glb" id="22_gvfv4"]
[ext_resource type="PackedScene" uid="uid://d1ax6non6i8ms" path="res://kenney_mini-characters/Models/GLB format/character-male-f.glb" id="23_ldgef"]
[ext_resource type="Script" uid="uid://bf0koldgsujgw" path="res://scripts/NewDoor.gd" id="new_door_script"]

[sub_resource type="BoxShape3D" id="BoxShape3D_continuous_floor"]
size = Vector3(87.9099, 0.1, 44.4244)

[sub_resource type="BoxShape3D" id="BoxShape3D_backup_floor"]
size = Vector3(100, 1, 50)

[sub_resource type="BoxShape3D" id="BoxShape3D_wall"]
size = Vector3(4, 4, 0.5)

[node name="DungeonLevel" type="Node3D"]
script = ExtResource("1_2gd5k")

[node name="ContinuousFloor" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.14792, 0, -10.1386)

[node name="FloorCollision" type="CollisionShape3D" parent="ContinuousFloor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16.5941, 0, -0.737367)
shape = SubResource("BoxShape3D_continuous_floor")

[node name="BackupFloor" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.259799, 0, -15.198)

[node name="BackupFloorCollision" type="CollisionShape3D" parent="BackupFloor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, -5, 0)
shape = SubResource("BoxShape3D_backup_floor")

[node name="StartingRoom" type="Node3D" parent="."]
transform = Transform3D(1, 0, -0.000191986, 0, 1, 0, 0.000191986, 0, 1, -0.951677, 0, 0)

[node name="RoomModel" parent="StartingRoom" instance=ExtResource("3_room_small")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.6345, 0, 0)

[node name="ExampleWall" type="StaticBody3D" parent="StartingRoom"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.3581, 0, 5.85017)

[node name="WallModel" parent="StartingRoom/ExampleWall" instance=ExtResource("7_wall")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000430107, 0, 0.226422)

[node name="WallCollision" type="CollisionShape3D" parent="StartingRoom/ExampleWall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.16814, 0)
shape = SubResource("BoxShape3D_wall")

[node name="ExampleWall3" type="StaticBody3D" parent="StartingRoom"]
transform = Transform3D(-0.0073652, 0, -0.999973, 0, 1, 0, 0.999973, 0, -0.0073652, -17.3893, 0, 0.14534)

[node name="WallModel" parent="StartingRoom/ExampleWall3" instance=ExtResource("7_wall")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000430107, 0, 0.226422)

[node name="WallCollision" type="CollisionShape3D" parent="StartingRoom/ExampleWall3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.16814, 0)
shape = SubResource("BoxShape3D_wall")

[node name="ExampleWall2" type="StaticBody3D" parent="StartingRoom"]
transform = Transform3D(-1, 0, 0.000279339, 0, 1, 0, -0.000279339, 0, -1, -12.0676, 0, -5.7773)

[node name="WallModel" parent="StartingRoom/ExampleWall2" instance=ExtResource("7_wall")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000430107, 0, 0.226422)

[node name="WallCollision" type="CollisionShape3D" parent="StartingRoom/ExampleWall2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.960415, 0)
shape = SubResource("BoxShape3D_wall")

[node name="Room2" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.9382, 0, 0)

[node name="RoomModel" parent="Room2" instance=ExtResource("3_room_small")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.6345, 0, 0)

[node name="NPCPortugues" parent="Room2" instance=ExtResource("2_8bkgm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12.6293, 0, -3.62535)
npc_name = "Profa. Valéria"
subject = "Português"
greeting_message = "Olá! Sou a Professora Valéria e ensino Língua Portuguesa para o 6º ano!"
room_id = "start"
unlocks_room = "ciencias_room"
quiz_mode = "pergunta_multipla_escolha"

[node name="ExampleWall" type="StaticBody3D" parent="Room2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.3581, 0, 5.85017)

[node name="WallModel" parent="Room2/ExampleWall" instance=ExtResource("7_wall")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000430107, 0, 0.226422)

[node name="WallCollision" type="CollisionShape3D" parent="Room2/ExampleWall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.16814, 0)
shape = SubResource("BoxShape3D_wall")

[node name="ExampleWall2" type="StaticBody3D" parent="Room2"]
transform = Transform3D(-1, 0, 0.000279339, 0, 1, 0, -0.000279339, 0, -1, -12.0676, 0, -5.7773)

[node name="WallModel" parent="Room2/ExampleWall2" instance=ExtResource("7_wall")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000430107, 0, 0.226422)

[node name="WallCollision" type="CollisionShape3D" parent="Room2/ExampleWall2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.960415, 0)
shape = SubResource("BoxShape3D_wall")

[node name="CienciasDoor" type="StaticBody3D" parent="Room2"]
transform = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, -5.61343, 0, 0)
script = ExtResource("new_door_script")
door_name = "ciencias_door"
unlocks_when_npc_completes = "Profa. Valéria"

[node name="DoorMesh" parent="Room2/CienciasDoor" instance=ExtResource("6_gate_door")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.160712)

[node name="CienciasDoor" type="StaticBody3D" parent="."]
transform = Transform3D(0.999999, 0, 0.00137885, 0, 1, 0, -0.00137885, 0, 0.999999, 15.1804, 0, -9.66077)
script = ExtResource("new_door_script")
door_name = "matematica_door"
unlocks_when_npc_completes = "Prof. Makson"

[node name="DoorMesh" parent="CienciasDoor" instance=ExtResource("6_gate_door")]

[node name="Room3_big" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.2351, 0, 0)

[node name="RoomModel" parent="Room3_big" instance=ExtResource("4_room_large")]

[node name="NPCCiencias" parent="Room3_big" instance=ExtResource("2_male")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.08014, 0, -3.54041)
npc_name = "Prof. Makson"
subject = "Ciências"
greeting_message = "Olá! Sou o Professor Makson e ensino Ciências da Natureza para o 6º ano!"
room_id = "ciencias_room"
unlocks_room = "matematica_room"
quiz_mode = "pergunta_multipla_escolha"

[node name="ExampleWall4" type="StaticBody3D" parent="Room3_big"]
transform = Transform3D(0.999999, 0, -0.00122172, 0, 1, 0, 0.00122172, 0, 0.999999, -0.233635, 0, 9.81483)

[node name="WallModel" parent="Room3_big/ExampleWall4" instance=ExtResource("7_wall")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000430107, 0, 0.226422)

[node name="WallCollision" type="CollisionShape3D" parent="Room3_big/ExampleWall4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.960415, 0)
shape = SubResource("BoxShape3D_wall")

[node name="ExampleWall5" type="StaticBody3D" parent="Room3_big"]
transform = Transform3D(-0.00651007, 0, 0.999979, 0, 1, 0, -0.999979, 0, -0.00651007, 9.74621, 0, 0.142649)

[node name="WallModel" parent="Room3_big/ExampleWall5" instance=ExtResource("7_wall")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000430107, 0, 0.226422)

[node name="WallCollision" type="CollisionShape3D" parent="Room3_big/ExampleWall5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.960415, 0)
shape = SubResource("BoxShape3D_wall")

[node name="Room4" parent="." instance=ExtResource("3_room_small")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.2184, 0.0499992, -15.8961)

[node name="ExampleWall7" type="StaticBody3D" parent="Room4"]
transform = Transform3D(0.00905812, 0, -0.999959, 0, 1, 0, 0.999959, 0, 0.00905812, -5.82545, -0.0499992, -0.00178719)

[node name="WallModel" parent="Room4/ExampleWall7" instance=ExtResource("7_wall")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000430107, 0, 0.226422)

[node name="WallCollision" type="CollisionShape3D" parent="Room4/ExampleWall7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.960415, 0)
shape = SubResource("BoxShape3D_wall")

[node name="ExampleWall6" type="StaticBody3D" parent="Room4"]
transform = Transform3D(-0.00651007, 0, 0.999979, 0, 1, 0, -0.999979, 0, -0.00651007, 5.81011, -0.0499992, -0.00178528)

[node name="WallModel" parent="Room4/ExampleWall6" instance=ExtResource("7_wall")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000430107, 0, 0.226422)

[node name="WallCollision" type="CollisionShape3D" parent="Room4/ExampleWall6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.960415, 0)
shape = SubResource("BoxShape3D_wall")

[node name="NPCMatematica" parent="Room4" instance=ExtResource("2_matematica")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.01672, -0.0499992, -1.62051)
npc_name = "Prof. Bruno"
subject = "Matemática"
greeting_message = "Olá! Sou o Professor Bruno e ensino Matemática para o 6º ano!"
room_id = "matematica_room"
unlocks_room = "geografia_room"
quiz_mode = "pergunta_multipla_escolha"

[node name="MatematicaDoor2" type="StaticBody3D" parent="Room4"]
transform = Transform3D(-0.999965, 0, -0.00830764, 0, 1, 0, 0.00830764, 0, -0.999965, 0.0260963, -0.0499992, -5.81833)
script = ExtResource("new_door_script")
door_name = "geografia_door"
unlocks_when_npc_completes = "Prof. Bruno"

[node name="DoorMesh" parent="Room4/MatematicaDoor2" instance=ExtResource("6_gate_door")]

[node name="Room5" parent="." instance=ExtResource("10_cabpm")]
transform = Transform3D(-0.000907584, 0, -1, 0, 1, 0, 1, 0, -0.000907584, 15.2917, 0, -31.8501)

[node name="ExampleWall8" type="StaticBody3D" parent="Room5"]
transform = Transform3D(-0.999972, 0, -0.00741763, 0, 1, 0, 0.00741763, 0, -0.999972, -0.159422, 0, -5.73662)

[node name="WallModel" parent="Room5/ExampleWall8" instance=ExtResource("7_wall")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000430107, 0, 0.226422)

[node name="WallCollision" type="CollisionShape3D" parent="Room5/ExampleWall8"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.960415, 0)
shape = SubResource("BoxShape3D_wall")

[node name="ExampleWall9" type="StaticBody3D" parent="Room5"]
transform = Transform3D(0.999978, 0, 0.00663215, 0, 1, 0, -0.00663215, 0, 0.999978, -0.149008, 0, 5.73629)

[node name="WallModel" parent="Room5/ExampleWall9" instance=ExtResource("7_wall")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000430107, 0, 0.226422)

[node name="WallCollision" type="CollisionShape3D" parent="Room5/ExampleWall9"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.960415, 0)
shape = SubResource("BoxShape3D_wall")

[node name="NPCGeografia" parent="Room5" instance=ExtResource("2_geografia")]
transform = Transform3D(-0.0138226, 0, 0.999905, 0, 1, 0, -0.999905, 0, -0.0138226, -3.91939, 0, 2.53989)
npc_name = "Profa. Amanda"
greeting_message = "Olá! Sou a Professora Amanda e ensino Geografia para o 6º ano!"
room_id = "geografia_room"
unlocks_room = "historia_room"
quiz_mode = "pergunta_multipla_escolha"

[node name="HistoriaDoor" type="StaticBody3D" parent="Room5"]
transform = Transform3D(-0.00191986, 0, 0.999998, 0, 1, 0, -0.999998, 0, -0.00191986, -9.79147, 0, 0.0893984)
script = ExtResource("new_door_script")
door_name = "historia_door"
unlocks_when_npc_completes = "Profa. Amanda"

[node name="DoorMesh" parent="Room5/HistoriaDoor" instance=ExtResource("6_gate_door")]

[node name="Room6" parent="." instance=ExtResource("10_udr20")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.2756, 0.0499992, -51.6466)

[node name="ExampleWall10" type="StaticBody3D" parent="Room6"]
transform = Transform3D(0.00417131, 0, -0.999991, 0, 1, 0, 0.999991, 0, 0.00417131, -9.81637, -0.0499992, -0.0599213)

[node name="WallModel" parent="Room6/ExampleWall10" instance=ExtResource("7_wall")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000430107, 0, 0.226422)

[node name="WallCollision" type="CollisionShape3D" parent="Room6/ExampleWall10"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.960415, 0)
shape = SubResource("BoxShape3D_wall")

[node name="ExampleWall11" type="StaticBody3D" parent="Room6"]
transform = Transform3D(-1, 0, 0.000698188, 0, 1, 0, -0.000698188, 0, -1, 0.214352, -0.0499992, -9.81957)

[node name="WallModel" parent="Room6/ExampleWall11" instance=ExtResource("7_wall")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000430107, 0, 0.226422)

[node name="WallCollision" type="CollisionShape3D" parent="Room6/ExampleWall11"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.960415, 0)
shape = SubResource("BoxShape3D_wall")

[node name="NPCHistoria" parent="Room6" instance=ExtResource("2_historia")]
transform = Transform3D(0.999917, 0, 0.0129151, 0, 1, 0, -0.0129151, 0, 0.999917, 2.15649, -0.0499992, -5.57437)
npc_name = "Profa. Karine"
subject = "História"
greeting_message = "Olá! Sou a Professora Karine e ensino História para o 6º ano!"
room_id = "historia_room"
unlocks_room = "final_room"
quiz_mode = "pergunta_multipla_escolha"

[node name="Room7" parent="." instance=ExtResource("10_cabpm")]
transform = Transform3D(-0.999988, 0, 0.00485201, 0, 1, 0, -0.00485201, 0, -0.999988, 35.2161, 0, -51.66)

[node name="ExampleWall8" type="StaticBody3D" parent="Room7"]
transform = Transform3D(-0.999972, 0, -0.00741763, 0, 1, 0, 0.00741763, 0, -0.999972, -0.159422, 0, -5.73662)

[node name="WallModel" parent="Room7/ExampleWall8" instance=ExtResource("7_wall")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000430107, 0, 0.226422)

[node name="WallCollision" type="CollisionShape3D" parent="Room7/ExampleWall8"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.960415, 0)
shape = SubResource("BoxShape3D_wall")

[node name="ExampleWall9" type="StaticBody3D" parent="Room7"]
transform = Transform3D(0.999978, 0, 0.00663215, 0, 1, 0, -0.00663215, 0, 0.999978, -0.149008, 0, 5.73629)

[node name="WallModel" parent="Room7/ExampleWall9" instance=ExtResource("7_wall")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000430107, 0, 0.226422)

[node name="WallCollision" type="CollisionShape3D" parent="Room7/ExampleWall9"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.960415, 0)
shape = SubResource("BoxShape3D_wall")

[node name="FinalDoor" type="StaticBody3D" parent="Room7"]
transform = Transform3D(0.00485201, 0, -0.999988, 0, 1, 0, 0.999988, 0, 0.00485201, 10.0559, 0, -0.036274)
script = ExtResource("new_door_script")
door_name = "final_door"
unlocks_when_npc_completes = "Profa. Karine"

[node name="DoorMesh" parent="Room7/FinalDoor" instance=ExtResource("6_gate_door")]

[node name="Room8" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 55.171, 0, -51.5413)

[node name="RoomModel" parent="Room8" instance=ExtResource("4_room_large")]

[node name="ExampleWall4" type="StaticBody3D" parent="Room8"]
transform = Transform3D(0.999999, 0, -0.00122172, 0, 1, 0, 0.00122172, 0, 0.999999, -0.233635, 0, 9.81483)

[node name="WallModel" parent="Room8/ExampleWall4" instance=ExtResource("7_wall")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000430107, 0, 0.226422)

[node name="WallCollision" type="CollisionShape3D" parent="Room8/ExampleWall4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.960415, 0)
shape = SubResource("BoxShape3D_wall")

[node name="ExampleWall6" type="StaticBody3D" parent="Room8"]
transform = Transform3D(-1, 0, -5.23012e-05, 0, 1, 0, 5.23012e-05, 0, -1, -0.233635, 0, -9.83267)

[node name="WallModel" parent="Room8/ExampleWall6" instance=ExtResource("7_wall")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000430107, 0, 0.226422)

[node name="WallCollision" type="CollisionShape3D" parent="Room8/ExampleWall6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.960415, 0)
shape = SubResource("BoxShape3D_wall")

[node name="ExampleWall5" type="StaticBody3D" parent="Room8"]
transform = Transform3D(-0.00651007, 0, 0.999979, 0, 1, 0, -0.999979, 0, -0.00651007, 9.74621, 0, 0.142649)

[node name="WallModel" parent="Room8/ExampleWall5" instance=ExtResource("7_wall")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000430107, 0, 0.226422)

[node name="WallCollision" type="CollisionShape3D" parent="Room8/ExampleWall5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.960415, 0)
shape = SubResource("BoxShape3D_wall")

[node name="NPCDiretor" parent="Room8" instance=ExtResource("2_diretor")]
transform = Transform3D(0.999917, 0, 0.0129151, 0, 1, 0, -0.0129151, 0, 0.999917, -66.2051, 0, 52.6325)
npc_name = "Dir. Oliveira"
subject = "Revisão Geral"
greeting_message = "Parabéns por chegar até aqui! Sou o Diretor Oliveira e farei uma revisão geral dos conhecimentos!"

[node name="character-female-a2" parent="." instance=ExtResource("12_i35j1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -35.2974, 9.53674e-07, -10.3938)

[node name="character-female-b2" parent="." instance=ExtResource("13_u7gqd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -35.2974, 9.53674e-07, -10.3938)

[node name="character-female-c2" parent="." instance=ExtResource("14_uw3sn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -35.2974, 9.53674e-07, -10.3938)

[node name="character-female-d2" parent="." instance=ExtResource("15_35sjm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -35.2974, 9.53674e-07, -10.3938)

[node name="character-female-e2" parent="." instance=ExtResource("16_l5c6j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -35.2974, 9.53674e-07, -10.3938)

[node name="character-female-f2" parent="." instance=ExtResource("17_j8sut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -35.2974, 9.53674e-07, -10.3938)

[node name="character-male-a2" parent="." instance=ExtResource("18_7xeh1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -35.2974, 9.53674e-07, -10.3938)

[node name="character-male-b2" parent="." instance=ExtResource("19_vxgt2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -35.2974, 9.53674e-07, -10.3938)

[node name="character-male-c2" parent="." instance=ExtResource("20_ssanu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -35.2974, 9.53674e-07, -10.3938)

[node name="character-male-d2" parent="." instance=ExtResource("21_ybux8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -35.2974, 9.53674e-07, -10.3938)

[node name="character-male-e2" parent="." instance=ExtResource("22_gvfv4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -35.2974, 9.53674e-07, -10.3938)

[node name="character-male-f2" parent="." instance=ExtResource("23_ldgef")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -35.2974, 9.53674e-07, -10.3938)
